<resources>
    <string name="app_name">WizardOfLegendGuide</string>
    <string name="basic_dmg">基础伤害</string>
    <string name="enhanced_dmg">增强后伤害</string>
    <string name="cd">冷却时间</string>
    <string name="fend_off">击退效果</string>
    <string name="duration">效果时长</string>
    <string name="offset">消弹效果</string>
    <string name="note">备注</string>
    <string name="max_health">最大生命值</string>
    <string name="run_speed">奔跑速度</string>
    <string name="critical_chance">暴击率</string>
    <string name="critical_damage">暴击伤害</string>
    <string name="damge">伤害</string>
    <string name="envade_chance">闪避率</string>
    <string name="armor">护甲</string>
    <string name="defense">防御</string>
    <string name="arcana">奥义</string>
    <string name="relics">符文</string>
    <string name="cloak">斗篷</string>


</resources>
